--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -3,7 +3,25 @@ on:
   push:
     branches:
       - "master" # excludes main
-jobs:
+jobs:     
+  test-macos:
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: [2.6.9, 2.7, "3.0"]
+
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          bundler-cache: true
+      - name: Run specs
+        run: bundle exec rspec
+    
   run-rspec-tests:
     runs-on: ubuntu-latest
     steps:
