--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -7,13 +7,15 @@
 # To get a newer version, you will need to update the SHA.
 # You can also reference a tag or branch, but the action may change without warning.
 
-name: Matrix Testing
+name: Rspec Run
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron: '16 4 12 * *'
 
 jobs:
   test:
